// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots dag/advanced editable mode 1`] = `
<div
  contentEditable={true}
  onKeyUp={[Function]}
  style={
    Object {
      "caretColor": "transparent",
      "outline": "none",
      "position": "relative",
    }
  }
  suppressContentEditableWarning={true}
>
  <svg
    className="dag-wrapper Dag-root-8"
    height={800}
    onDoubleClick={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    width={800}
  >
    <g
      className="dag__graph"
    >
      <g
        className="dag__edge Dag-dagEdge-11 Dag-dagEditable-12"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-0"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-11 Dag-dagEditable-12"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-1"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-11 Dag-dagEditable-12"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-2"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-11 Dag-dagEditable-12"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-3"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-11 Dag-dagEditable-12"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-4"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-11 Dag-dagEditable-12"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-5"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-9 Dag-dagEditable-12"
        id="dag__node--app"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-10"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-9 Dag-dagEditable-12"
        id="dag__node--lodash"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-10"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-9 Dag-dagEditable-12"
        id="dag__node--react"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-10"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-9 Dag-dagEditable-12"
        id="dag__node--react-dom"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-10"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-9 Dag-dagEditable-12"
        id="dag__node--apollo"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-10"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-9 Dag-dagEditable-12"
        id="dag__node--enzyme"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-10"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Storyshots dag/basic no wrapper 1`] = `
<div
  contentEditable={true}
  onKeyUp={[Function]}
  style={
    Object {
      "caretColor": "transparent",
      "outline": "none",
      "position": "relative",
    }
  }
  suppressContentEditableWarning={true}
>
  <svg
    className="dag-wrapper Dag-root-1"
    height={800}
    onDoubleClick={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    width={800}
  >
    <g
      className="dag__graph"
    >
      <g
        className="dag__edge Dag-dagEdge-4"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-0"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-4"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-1"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-4"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-2"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-4"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-3"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-4"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-4"
        />
      </g>
      <g
        className="dag__edge Dag-dagEdge-4"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-5"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-2"
        id="dag__node--app"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-2"
        id="dag__node--lodash"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-2"
        id="dag__node--react"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-2"
        id="dag__node--react-dom"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-2"
        id="dag__node--apollo"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node Dag-dagNode-2"
        id="dag__node--enzyme"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Storyshots dag/themed paper wrapper (dark) 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100vw",
    }
  }
>
  <div
    className="MuiPaper-root-49 MuiPaper-elevation2-53 MuiPaper-rounded-50"
    style={
      Object {
        "height": "800px",
        "width": "800px",
      }
    }
  >
    <div
      contentEditable={true}
      onKeyUp={[Function]}
      style={
        Object {
          "caretColor": "transparent",
          "outline": "none",
          "position": "relative",
        }
      }
      suppressContentEditableWarning={true}
    >
      <svg
        className="dag-wrapper Dag-root-76"
        height={800}
        onDoubleClick={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        width={800}
      >
        <g
          className="dag__graph"
        >
          <g
            className="dag__edge Dag-dagEdge-79"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-0"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-79"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-1"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-79"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-2"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-79"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-3"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-79"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-4"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-79"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-5"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-77"
            id="dag__node--app"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-78"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-77"
            id="dag__node--lodash"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-78"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-77"
            id="dag__node--react"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-78"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-77"
            id="dag__node--react-dom"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-78"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-77"
            id="dag__node--apollo"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-78"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-77"
            id="dag__node--enzyme"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-78"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots dag/themed paper wrapper (light) 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100vw",
    }
  }
>
  <div
    className="MuiPaper-root-15 MuiPaper-elevation2-19 MuiPaper-rounded-16"
    style={
      Object {
        "height": "800px",
        "width": "800px",
      }
    }
  >
    <div
      contentEditable={true}
      onKeyUp={[Function]}
      style={
        Object {
          "caretColor": "transparent",
          "outline": "none",
          "position": "relative",
        }
      }
      suppressContentEditableWarning={true}
    >
      <svg
        className="dag-wrapper Dag-root-42"
        height={800}
        onDoubleClick={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        width={800}
      >
        <g
          className="dag__graph"
        >
          <g
            className="dag__edge Dag-dagEdge-45"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-0"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-45"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-1"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-45"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-2"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-45"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-3"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-45"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-4"
            />
          </g>
          <g
            className="dag__edge Dag-dagEdge-45"
            onClick={[Function]}
          >
            <line />
            <polygon
              className="dag__edge-arrow"
              id="dag__line-5"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-43"
            id="dag__node--app"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-44"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-43"
            id="dag__node--lodash"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-44"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-43"
            id="dag__node--react"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-44"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-43"
            id="dag__node--react-dom"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-44"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-43"
            id="dag__node--apollo"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-44"
            />
          </g>
          <g
            className="dag__node Dag-dagNode-43"
            id="dag__node--enzyme"
            onClick={[Function]}
            onDoubleClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-44"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;
